[package]
name = "rk2"
version = "0.1.0"
authors = ["Simon Heath <simon@noctis-productions.com>"]
license = "..."
readme = "README.md"

[dependencies]

ggez = { git = "https://github.com/ggez/ggez", branch = "master" }
#ggez-goodies = { git = "https://github.com/ggez/ggez-goodies", branch = "master" }
ggez-goodies = { path = "/home/icefox/src/ggez-goodies" }

specs = "0.7"

#rand = "0.3"
nalgebra = "0.10"